<resources>
    <string name="app_name">EpileTrack</string>

    <string name="create">Create</string>
    <string name="epile_track">EpileTrack</string>
    <string name="epile_track_by">by</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="bs">bs</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_login1">Sign in</string>
    <string name="action_dont_have_account">DON\'T HAVE AN ACCOUNT? SIGN UP</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="title">EpileTrack</string>
    <string name="dialog_message">Feature in development, contact the developers.</string>
    <string name="dialog_title">Warning</string>
    <string name="close">Click to return to the previous frame.</string>

    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="prompt_fullName">Full Name</string>
    <string name="prompt_eMail">E-Mail</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="prompt_birthDate">Birthday</string>
    <string name="prompt_diagnosticDate">Diagnosys Date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_seizure">AddSeizure</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="severity">Severity</string>
    <string name="date">Date</string>
    <string-array name="seizuretype">
        <item>Absence</item>
        <item>Convultions</item>
    </string-array> 
</resources>
