<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.example.cristi.epiletrack.LogScreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_ll"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="vertical"
            tools:ignore="UselessParent">

        <TextView
            android:id="@+id/fullscreen_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/epile_track"
            android:textColor="#33b5e5"
            android:layout_margin="10dp"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fullscreen_content_by"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/epile_track_by"
            android:textColor="#33b5e5"
            android:textSize="50sp"
            android:layout_margin="10dp"
            android:textStyle="bold" />

            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:src="@drawable/brain"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/bs" />

            </FrameLayout>


            <LinearLayout
                android:id="@+id/fullscreen_content_controls"
                style="?metaButtonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:background="@color/black_overlay"
                android:orientation="vertical"
                tools:ignore="UselessParent"
                android:gravity="bottom">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:id="@+id/button"
                    android:textSize="50sp"
                    android:textColor="@color/buttonLoginColor"
                    android:background="@color/buttonLoginColorBackground"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_alignParentBottom="true"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:id="@+id/button2"
                    android:textSize="50sp"
                    android:layout_margin="10dp"
                    android:textColor="@color/buttonLoginColor"
                    android:background="@color/buttonLoginColorBackground"
                    android:layout_gravity="center"
                    android:layout_alignParentBottom="true"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</FrameLayout>
